--- a/index.html
+++ b/index.html
@@ -94,89 +94,85 @@
             </div>
         </div>
     </section>
-    <section>
-        <div class="container skill">
-            <div class="row">
-                <div class="skillSlider">
-                    <div class="slider ">
-                        <div class="s-slide active">
-                            <div class="container">
-                                <div class="icon">
-                                    <img src="https://cdn-icons.flaticon.com/png/128/2704/premium/2704022.png?token=exp=1656670693~hmac=0da47833dcf12e2f725d195e6f78d6bc"
-                                        alt="">
-                                </div>
-                                <div class="description">
-                                    <h1 class="des-header">Web Development</h1>
-                                    <div class="web-text">
-                                        "Web Design similar process of creation,
-                                        with the intension
-                                        intension of the pre processing..."
-                                    </div>
-                                </div>
+    <section class="skill">
+        <div class="container">
+            <div class="skillSlider">
+                <div class="slider ">
+                    <div class="s-slide active">
+                        <div class="container">
+                            <div class="icon">
+                                <img src="https://cdn-icons.flaticon.com/png/128/2704/premium/2704022.png?token=exp=1656670693~hmac=0da47833dcf12e2f725d195e6f78d6bc"
+                                    alt="">
                             </div>
-                        </div>
-                        <div class="s-slide">
-                            <div class="container">
-                                <div class="icon">
-                                    <img src="https://cdn-icons-png.flaticon.com/512/688/688113.png" alt="">
-                                </div>
-                                <div class="description">
-                                    <h1 class="des-header">Adove PhotoShop</h1>
-                                    <div class="web-text">
-                                        "Web Design similar process of creation,
-                                        with the intension
-                                        intension of the pre processing..."
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="s-slide">
-                            <div class="container">
-                                <div class="icon">
-                                    <img src="https://cdn-icons-png.flaticon.com/512/775/775497.png" alt="">
-                                </div>
-                                <div class="description">
-                                    <h1 class="des-header">Creative Design</h1>
-                                    <div class="web-text">
-                                        "Web Design similar process of creation,
-                                        with the intension
-                                        intension of the pre processing..."
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="s-slide">
-                            <div class="container">
-                                <div class="icon">
-                                    <img src="https://cdn-icons-png.flaticon.com/512/1283/1283342.png" alt="">
-                                </div>
-                                <div class="description">
-                                    <h1 class="des-header">Brand Idenitity</h1>
-                                    <div class="web-text">
-                                        "Web Design similar process of creation,
-                                        with the intension
-                                        intension of the pre processing..."
-                                    </div>
+                            <div class="description">
+                                <h1 class="des-header">Web Development</h1>
+                                <div class="web-text">
+                                    "Web Design similar process of creation,
+                                    with the intension
+                                    intension of the pre processing..."
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="slider-btn">
-                        <button class="left arrow"><i class="fa-solid fa-angle-left"></i></button>
-                        <button class="right arrow"><i class="fa-solid fa-angle-right"></i></i></button>
+                    <div class="s-slide">
+                        <div class="container">
+                            <div class="icon">
+                                <img src="https://cdn-icons-png.flaticon.com/512/688/688113.png" alt="">
+                            </div>
+                            <div class="description">
+                                <h1 class="des-header">Adove PhotoShop</h1>
+                                <div class="web-text">
+                                    "Web Design similar process of creation,
+                                    with the intension
+                                    intension of the pre processing..."
+                                </div>
+                            </div>
+                        </div>
                     </div>
+                    <div class="s-slide">
+                        <div class="container">
+                            <div class="icon">
+                                <img src="https://cdn-icons-png.flaticon.com/512/775/775497.png" alt="">
+                            </div>
+                            <div class="description">
+                                <h1 class="des-header">Creative Design</h1>
+                                <div class="web-text">
+                                    "Web Design similar process of creation,
+                                    with the intension
+                                    intension of the pre processing..."
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="s-slide">
+                        <div class="container">
+                            <div class="icon">
+                                <img src="https://cdn-icons-png.flaticon.com/512/1283/1283342.png" alt="">
+                            </div>
+                            <div class="description">
+                                <h1 class="des-header">Brand Idenitity</h1>
+                                <div class="web-text">
+                                    "Web Design similar process of creation,
+                                    with the intension
+                                    intension of the pre processing..."
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="slider-btn">
+                    <button class="left arrow"><i class="fa-solid fa-angle-left"></i></button>
+                    <button class="right arrow"><i class="fa-solid fa-angle-right"></i></i></button>
                 </div>
             </div>
         </div>
         </div>
     </section>
-    <section style="background-color:  #F8F9FA;">
-        <div class="container portfolio">
-            <div class="portfolio-title-holder">
-                        <div class="title-left">
-                            <h3>FEATURED WORKS <span class="bg-title">portfolio</span></h3>
-                        </div>
-                    </div>
+    <section class="portfolio" style="background-color:  #F8F9FA;overflow: hidden;">
+        <div class="container">
+            <div class="sec-title">
+                <h3>FEATURED WORKS <span class="bg-title">portfolio</span></h3>
+            </div>
             <div class="filter-holder">
                 <ul>
                     <li>
@@ -359,20 +355,8 @@
                     </li>
                 </ul>
             </div>
-            <!-- </div> -->
         </div>
     </section>
-    <div style="display: none;" class="portfolio">
-        <div class="container">
-            <div class="row">
-                <div class="portfolio-title-holder">
-                    <div class="title">
-                        <h3>GET IN TOUCH <span class="bg-title">CONTACT</span></h3>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
     <script src="./js/app.js"></script>
 </body>
 
